new project name, license, readme

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "tictactoe",
+  "name": "tiktoktoe",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
