--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
