--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -16,7 +16,7 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
         with:
-          path: server/package.json
+          path: server
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
